# codeReview

./: gradle.properties  settings.gradle.kts
videstabilization/: ALGORITHM_IMPLEMENTATION.md  CHANGELOG.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  NEXT_STEPS.md  README.md  build.gradle
videstabilization/src/androidTest/java/com/hsl/videstabilization/: ExampleInstrumentedTest.kt
videstabilization/src/main/: AndroidManifest.xml
videstabilization/src/main/cpp/jni/: opencv_jni.cpp
videstabilization/src/main/java/com/hsl/videstabilization/algorithm/motion/: BaseMotionEstimator.kt  FeatureBasedMotionEstimator.kt  HybridMotionEstimator.kt  (+4 more)
videstabilization/src/main/java/com/hsl/videstabilization/api/: StabilizationListener.kt  StabilizationParams.kt  StabilizerConfig.kt  VideoStabilizer.kt
videstabilization/src/main/java/com/hsl/videstabilization/codec/: VideoCodec.kt  VideoCodecExample.kt  VideoCodecTest.kt  VideoDecoder.kt  VideoEncoder.kt  VideoFormatConverter.kt  VideoFrameProcessor.kt  VideoTranscoder.kt  VideoUtils.kt
videstabilization/src/main/java/com/hsl/videstabilization/core/: StabilizationTask.kt
videstabilization/src/main/java/com/hsl/videstabilization/example/: StabilizationExample.kt
videstabilization/src/main/java/com/hsl/videstabilization/sensor/: SensorDataCollector.kt
videstabilization/src/main/java/com/hsl/videstabilization/util/: MatrixUtils.kt  OpenCVJNI.kt  OpenCVTest.kt  OpenCVUtils.kt
videstabilization/src/main/res/values/: strings.xml  themes.xml
videstabilization/src/test/java/com/hsl/videstabilization/: ExampleUnitTest.kt
(+32 files in other folders)
